static/css/style.css
#siteVideo {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}



#dropzone {
    border : 5px dashed lightgrey;
    border-width: 5px;
    width: 200px;
    height: 200px;
    text-align: center; 
    margin-left: 300px;
    margin-right: 300px;

}
#upload{
  margin-top:15px;
}

#img_submit{
  margin:10px;
}



#map {
  width: 900px;
  height: 500px;
  margin: 0;
  padding: 0;    
}

.title{
    color:black;
}


.hug-boxes{
  /* dashboard hugs*/
  width: 200px;
  height: 200px;
  border: solid;
  color: grey;
  padding:0px;
  margin:25px;
  text-align: center;
  display:inline-block;

}

#homepage{
  width:960px;
  /*margin:200px, 200px, 200px, 200px;*/
}

#blank-space{
  /* blank top space on homepage*/
  height: 200px;
  /*color:grey;*/
  margin-left:25px;
  margin-right: 25px;
  /*background-color: lightgrey;*/
}

#frontpage-icons{
  align-items: center;
  padding:auto;
  margin-left:50px;
  margin-right:50px;
}
.col-2{
  /* row for icons */
  height:45px;
  /*background-color: lightgrey;*/
  margin-left:auto;
  margin-right:auto;
  margin-top: 15px;
  margin-bottom:15px;
  vertical-align:middle;
  text-align:center;
  color:white;
}

#leaf{
  fill:white;
}

#icon-instruction{
  /* icon explanation */
  height:50px;
  /*background-color: lightgrey;*/
  margin-left:25px;
  margin-right:25px;
  margin-top: 0px;
  margin-bottom:15px;
  text-align: center;
  vertical-align: middle;
  color:white;
}

#loading-zone{
  /* loading zone */
  height:300px;
  background-color: lightgrey;
  margin-left:25px;
  margin-right:25px;
/*  align-content: center;*/
}


#footer{
  height:50px;
  /*background-color: lightgrey;*/
  margin-left:25px;
  margin-right:25px;
  margin-top: 15px;
  margin-bottom:15px;
}

#prediction-first-row{
 /* height:100px;*/
  margin-top:25px;
  margin-bottom:25px;
  margin-left: 25px;
  margin-right:25px;
  align-content: center;
}

#prediction-image{
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 80%;
  border-radius: 8px;
}



#prediction-second-row{
  align-items:center;
  text-align: center;
  align-content: center;
  margin-top: 25px;
  margin-right:auto;
  margin-left:auto;
}

#no-match-found{
  width: 800px;
  height:400px;
  vertical-align: center;
  text-align: center;
  color:red;
  font-weight: bold;
  margin:auto;
  padding:auto;
}


#register-form{
  padding:25px;
}

#hug-and-info-row{
  padding:25px;
}

#information-row{
  margin-top: 25px;
}
.treedash-title{
  text-align: center;
}

#hug{
  color:grey;
  border : 5px;
  border-color: grey;
  border-width: 5px;
 /* background-color: grey;
  opacity:.4;*/
  margin-left:0px;
}
/*#map-result{
  vertical-align: center;
  align-content: center;

}*/

